# discord-homeworkhelp-bot

./: .gitignore  Pipfile  bot.py  database.py  lewin.py  pyproject.toml  setup.py  utils.py
