[tool.poetry]
name = "discord-homeworkhelp-bot"
version = "0.1.0"
description = ""
authors = ["sadeshmukh <thesahildeshmukh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nextcord = "^2.6.0"
openai = "^1.30.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
