[tool.poetry]
name = "discord-homeworkhelp-bot"
version = "0.1.0"
description = ""
authors = ["sadeshmukh <thesahildeshmukh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.6"
nextcord = "^2.6.0"
openai = "^1.30.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
ollama = "^0.2.0"
emoji = "^2.12.1"
firebase-admin = "^6.5.0"
cachetools = "^5.3.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
